--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,40 @@ body {
     display: none;
   }
 }
+.accessoriesSection {
+  background-image: linear-gradient(106.67deg, #232323 43.02%, #ff733b 86.82%),
+    linear-gradient(
+      180deg,
+      rgba(229, 229, 229, 0) 0%,
+      rgba(255, 255, 255, 0.99) 100%
+    );
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 20vw;
+}
+.ant-tabs-nav-wrap {
+  position: absolute;
+  margin-top: -120px;
+  margin-left: 60vw;
+  color: #f8f8f8;
+}
+:where(.css-dev-only-do-not-override-ed5zg0).ant-tabs
+  .ant-tabs-tab.ant-tabs-tab-active
+  .ant-tabs-tab-btn {
+  color: var(--dolphin);
+  font-size: 1.1em;
+  font-weight: 600;
+  padding: 5px 10px;
+  border: 1px solid var(--dolphin);
+  border-radius: 35px;
+}
+:where(.css-dev-only-do-not-override-ed5zg0).ant-tabs .ant-tabs-tab:hover {
+  color: #7b7b7b;
+}
+:where(.css-dev-only-do-not-override-ed5zg0).ant-tabs .ant-tabs-ink-bar {
+  background: transparent;
+}
