--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Changa+One&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600;700&display=swap");
 
 :root {
   --elephant: #7b7b7b;
@@ -57,18 +58,22 @@ body {
 }
 .ant-tabs-nav-wrap {
   position: absolute;
-  margin-top: -120px;
-  margin-left: 60vw;
-  color: #f8f8f8;
+  /* margin-top: -120px; */
+  margin-left: 22vw;
+  /* color: #f8f8f8; */
+  color: var(--cat);
+  font-size: 1.6rem;
+  font-weight: 600;
 }
 :where(.css-dev-only-do-not-override-ed5zg0).ant-tabs
   .ant-tabs-tab.ant-tabs-tab-active
   .ant-tabs-tab-btn {
-  color: var(--dolphin);
+  /* color: var(--dolphin); */
+  color: var(--zebra);
   font-size: 1.1em;
   font-weight: 600;
-  padding: 5px 10px;
-  border: 1px solid var(--dolphin);
+  padding: 2px 20px;
+  border: 1px solid var(--zebra);
   border-radius: 35px;
 }
 :where(.css-dev-only-do-not-override-ed5zg0).ant-tabs .ant-tabs-tab:hover {
@@ -76,4 +81,13 @@ body {
 }
 :where(.css-dev-only-do-not-override-ed5zg0).ant-tabs .ant-tabs-ink-bar {
   background: transparent;
+}
+
+.galleryContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
 }
