--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,3 +91,12 @@ body {
   gap: 20px;
   margin-top: 50px;
 }
+.productCard {
+  border: 2px solid #f4f4f4;
+  box-shadow: 4px 4px 4px 4px #a1a1a100;
+}
+.productCard:hover {
+  cursor: pointer;
+  border: 2px solid #f4f4f4;
+  box-shadow: 0px 3px 4px #a1a1a110;
+}
