--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,10 @@ body {
   padding-bottom: 6em;
 }
 
+.changa {
+  font-family: "Changa One", cursive;
+}
+
 a {
   color: inherit;
   text-decoration: none;
