--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,7 @@
   --elephant: #7b7b7b;
   --raven: #333333;
   --tiger: #ff733b;
+  --transparent-tiger: #ff723b66;
   --polarbear: rgba(255, 255, 255, 0.7);
   --dolphin: #f8f8f8;
   --panther: #2b2b2b;
